Updated install script, probably not working like tmux :(

--- a/.config/hypr/modules/env.conf
+++ b/.config/hypr/modules/env.conf
@@ -2,5 +2,5 @@ env = XCURSOR_SIZE,22
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,22
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-#env = LIBVA_DRIVER_NAME,nvidia
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
