--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2644,7 +2644,7 @@ confirm_os_window_close 0
 #: }}}
 
 # BEGIN_KITTY_FONTS
-font_family      family="FiraCode Nerd Font"
+font_family      family="FiraMono Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
