Modified nvim and added a wallpaper

--- a/.config/hypr/modules/binds.conf
+++ b/.config/hypr/modules/binds.conf
@@ -21,6 +21,8 @@ bind = $mainMod, O, exec, $notes
 bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
 bind = $mainMod, Print, exec, hyprshot -m region -o ~/Screenshots/ 
+bind = $mainMod, C, exec, kitty nvim
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
