--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,3 +8,5 @@ source = ~/.config/hypr/modules/rules.conf
 source = ~/.config/hypr/modules/start.conf
 
 source = /home/$USER/.cache/wal/colors-hyprland
+
+source = ~/.config/hypr/plugins/dmCursor.conf
