trying to fix tmux and dynamic cursor

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c1c3c3
-background         #09100f
+foreground         #c5c4c5
+background         #1a1617
 background_opacity 1.0
-cursor             #c1c3c3
+cursor             #c5c4c5
 
-active_tab_foreground     #09100f
-active_tab_background     #c1c3c3
-inactive_tab_foreground   #c1c3c3
-inactive_tab_background   #09100f
+active_tab_foreground     #1a1617
+active_tab_background     #c5c4c5
+inactive_tab_foreground   #c5c4c5
+inactive_tab_background   #1a1617
 
-active_border_color   #c1c3c3
-inactive_border_color #09100f
-bell_border_color     #3e422f
+active_border_color   #c5c4c5
+inactive_border_color #1a1617
+bell_border_color     #9c5a6c
 
-color0       #09100f
-color8       #576a6a
-color1       #3e422f
-color9       #53583F
-color2       #134a3c
-color10      #1A6351
-color3       #217151
-color11      #2C976C
-color4       #497f42
-color12      #62AA59
-color5       #47764b
-color13      #5F9E65
-color6       #816958
-color14      #AD8D76
-color7       #8c9696
-color15      #c1c3c3
+color0       #1a1617
+color8       #725e65
+color1       #9c5a6c
+color9       #D07990
+color2       #7c707f
+color10      #A696AA
+color3       #aa7480
+color11      #E39BAB
+color4       #bdb46f
+color12      #FCF195
+color5       #8b94a2
+color13      #BAC6D9
+color6       #b9979a
+color14      #F7CACE
+color7       #9b9191
+color15      #c5c4c5
