Trying to make Obsidian use pywal

--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#7c707f'
-gradient_color_2 = '#aa7480'
+gradient_color_1 = '#134a3c'
+gradient_color_2 = '#217151'
 
