Obsidian theme half done

--- a/.config/hypr/modules/input.conf
+++ b/.config/hypr/modules/input.conf
@@ -20,3 +20,20 @@ input {
 gestures {
     workspace_swipe = true
 }
+
+plugin:dynamic-cursors {
+    mode = stretch
+    threshold = 2
+    shaperule = grab, stretch, stretch:limit: 2000
+    rotate {
+        length = 12
+        offset = 30
+    }
+    stretch {
+        limit = 1000
+        function = negative_quadratic
+    }
+    shake {
+        enabled = false
+    }
+}
