Added keyboard layout change with alt+space

--- a/.config/hypr/modules/input.conf
+++ b/.config/hypr/modules/input.conf
@@ -1,12 +1,13 @@
 input {
-    kb_layout = us
+    kb_layout = us,it
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
-
+    
+    # Change keyboard layout
     # Capslock as Ctrl
-    kb_options=ctrl:nocaps
+    kb_options=ctrl:nocaps, grp:alt_space_toggle 
 
     follow_mouse = 1
     accel_profile=flat
