--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c1c3c3
-background         #09100f
+foreground         #c3c2c3
+background         #0F0E12
 background_opacity 1.0
-cursor             #c1c3c3
+cursor             #c3c2c3
 
-active_tab_foreground     #09100f
-active_tab_background     #c1c3c3
-inactive_tab_foreground   #c1c3c3
-inactive_tab_background   #09100f
+active_tab_foreground     #0F0E12
+active_tab_background     #c3c2c3
+inactive_tab_foreground   #c3c2c3
+inactive_tab_background   #0F0E12
 
-active_border_color   #c1c3c3
-inactive_border_color #09100f
-bell_border_color     #3e422f
+active_border_color   #c3c2c3
+inactive_border_color #0F0E12
+bell_border_color     #2a313e
 
-color0       #09100f
-color8       #576a6a
-color1       #3e422f
-color9       #53583F
-color2       #134a3c
-color10      #1A6351
-color3       #217151
-color11      #2C976C
-color4       #497f42
-color12      #62AA59
-color5       #47764b
-color13      #5F9E65
-color6       #816958
-color14      #AD8D76
-color7       #8c9696
-color15      #c1c3c3
+color0       #0F0E12
+color8       #62596c
+color1       #2a313e
+color9       #394253
+color2       #3d3e47
+color10      #52535F
+color3       #635551
+color11      #85726D
+color4       #4f5a66
+color12      #6A7888
+color5       #5a6775
+color13      #788A9C
+color6       #657381
+color14      #879AAC
+color7       #928d98
+color15      #c3c2c3
