--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#3d3e47'
-gradient_color_2 = '#635551'
+gradient_color_1 = '#555861'
+gradient_color_2 = '#685d62'
 
