--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c3c2c3
-background         #0F0E12
+foreground         #c2c3c4
+background         #0c0f15
 background_opacity 1.0
-cursor             #c3c2c3
+cursor             #c2c3c4
 
-active_tab_foreground     #0F0E12
-active_tab_background     #c3c2c3
-inactive_tab_foreground   #c3c2c3
-inactive_tab_background   #0F0E12
+active_tab_foreground     #0c0f15
+active_tab_background     #c2c3c4
+inactive_tab_foreground   #c2c3c4
+inactive_tab_background   #0c0f15
 
-active_border_color   #c3c2c3
-inactive_border_color #0F0E12
-bell_border_color     #2a313e
+active_border_color   #c2c3c4
+inactive_border_color #0c0f15
+bell_border_color     #9c6a5b
 
-color0       #0F0E12
-color8       #62596c
-color1       #2a313e
-color9       #394253
-color2       #3d3e47
-color10      #52535F
-color3       #635551
-color11      #85726D
-color4       #4f5a66
-color12      #6A7888
-color5       #5a6775
-color13      #788A9C
-color6       #657381
-color14      #879AAC
-color7       #928d98
-color15      #c3c2c3
+color0       #0c0f15
+color8       #59616d
+color1       #9c6a5b
+color9       #D18E7A
+color2       #555861
+color10      #727682
+color3       #685d62
+color11      #8B7D83
+color4       #5a6069
+color12      #79818D
+color5       #7f6664
+color13      #AA8986
+color6       #a87b66
+color14      #E1A488
+color7       #8d9298
+color15      #c2c3c4
