--- a/.config/hypr/modules/rules.conf
+++ b/.config/hypr/modules/rules.conf
@@ -29,3 +29,6 @@ layerrule = ignorealpha 0.5, swaync-notification-window
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Fix context menu 
+windowrulev2=noblur,class:^()$,title:^()$
